nodeType nodeName nodeValue

--- a/Lab08/11imageObject.html
+++ b/Lab08/11imageObject.html
@@ -32,18 +32,18 @@
         document.querySelector("#idTaipei").addEventListener("mouseout", mouseOut);
         document.querySelector("#idTaipei").addEventListener("click", Click);
 
-        function mouseOver() {
-            document.images[0].src = "images/MapTaipei.gif";
-        }
+        // function mouseOver() {
+        //     document.images[0].src = "images/MapTaipei.gif";
+        // }
 
 
-        function mouseOut() {
-            document.images[0].src = "images/map00.gif";
-        }
+        // function mouseOut() {
+        //     document.images[0].src = "images/map00.gif";
+        // }
 
 
-        function Click() {
-            document.getElementById("mapdiv").innerHTML = "<img src='images/Taipei.gif'/>";
+        // function Click() {
+        //     document.getElementById("mapdiv").innerHTML = "<img src='images/Taipei.gif'/>";
         }
     </script>
 </body>
