--- a/Lab09/01DOM1.html
+++ b/Lab09/01DOM1.html
@@ -1,28 +1,49 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>01DOM1.html</title>
-</head><body><h1>Hello DOM</h1><p>I am a JavaScript</p>
-	<ul>
-		<li>aaaaa</li>
-		<li>bbbbb</li>
-		<li>ccccc</li>
-		<li>ddddd</li>
-		<li>eeeee</li>
-		<li>fffff</li>
+    <!-- <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            console.log(document.getElementById("myH"));
+        })
+    </script> -->
+</head>
+
+<body>
+    <h1 id="myH">Hello DOM</h1>
+    <p>I am a JavaScript</p>
+    <ul>
+        <li>aaaaa</li>
+        <li>bbbbb</li>
+        <li>ccccc</li>
+        <li>ddddd</li>
+        <li>eeeee</li>
+        <li>fffff</li>
     </ul>
 
-    <script >
+
+    <script>
         //*****************************************
         //nodeName 讀取元素節點內容，得到是元素名稱
         //nodeValue 讀取文字節點內容，得到的是文字內容
         //nodeType 讀取節點類型
         //*****************************************
 
-        alert(document.nodeType);  //9
-        alert(document.nodeName);  //#document
-        alert(document.nodeValue);  //null
+        const theNode = document.getElementById("myH");
+        //元素節點
+        console.log(theNode.nodeType);  //1
+        console.log(theNode.nodeName); //H1
+        console.log(theNode.nodeValue); //null
+        //文字節點
+        console.log(theNode.firstChild.nodeType);  //3
+        console.log(theNode.lastChild.nodeName); //#text
+        console.log(theNode.childNodes[0].nodeValue); //Hello DOM
+
+        // alert(document.nodeType);  //9
+        // alert(document.nodeName);  //#document
+        // alert(document.nodeValue);  //null
 
         //取得根元素 documentElement
         let root = document.documentElement;  //HTML
@@ -31,7 +52,7 @@
         let thebody = root.childNodes[1];  //BODY
 
 
-        let theNode = root.childNodes[1].childNodes[3].childNodes[3];  //LI
+        // let theNode = root.childNodes[1].childNodes[3].childNodes[3];  //LI
         //alert(root.childNodes[1].childNodes[3].nodeName);
         //alert(theNode.nodeName);
         //alert(theNode.firstChild.nodeValue);  //bbbbb
@@ -50,4 +71,5 @@
         }
     </script>
 </body>
+
 </html>
